# udacity

./: README.md
C++ Nanodegree/concurrent-traffic-simulation/: CMakeLists.txt
C++ Nanodegree/concurrent-traffic-simulation/include/: Graphics.h  TrafficLight.h  TrafficObject.h  Vehicle.h
C++ Nanodegree/concurrent-traffic-simulation/src/: Graphics.cpp  Intersection.cpp  TrafficLight.cpp  TrafficObject.cpp  TrafficSimulator-Final.cpp
C++ Nanodegree/memory-management-chatbot/: .gitignore  CMakeLists.txt  Makefile
C++ Nanodegree/memory-management-chatbot/include/: chatbot.h
C++ Nanodegree/memory-management-chatbot/src/: chatbot.cpp  chatgui.cpp  graphnode.cpp
C++ Nanodegree/memory-management-chatbot/test/: utest_chatbot.cpp
C++ Nanodegree/openstreetmap-route-planning/: .gitignore  README.md
C++ Nanodegree/openstreetmap-route-planning/src/: route_planner.h
C++ Nanodegree/system-monitor/: .gitignore  CMakeLists.txt
C++ Nanodegree/system-monitor/include/: linux_parser.h  processor.h  system.h
C++ Nanodegree/system-monitor/src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  system.cpp
C++ Nanodegree/system-monitor/test/: utest_linux_parser.cpp
Deep Learning Nanodegree/bikesharing/: NeuralNetwork.py  Predicting_bike_sharing_data.ipynb  README.md
Deep Learning Nanodegree/dog-classifier/: README.md  dog_app.ipynb  model_scratch.pt  model_transfer.pt  report.html
Deep Learning Nanodegree/face-generation/: README.md  report.html
Deep Learning Nanodegree/face-generation/model/: train_samples.pkl
Deep Learning Nanodegree/face-generation/notebooks/: dlnd_face_generation.ipynb
Deep Learning Nanodegree/sentiment-analysis-deployment/: .gitattributes  .gitignore  README.md
Deep Learning Nanodegree/sentiment-analysis-deployment/data/: aclImdb_v1.tgz
Deep Learning Nanodegree/sentiment-analysis-deployment/sentiment-analysis/: SageMaker Project.ipynb  report.html
Deep Learning Nanodegree/tv-script-generation/: .gitignore  README.md  report.html
Deep Learning Nanodegree/tv-script-generation/fake_script/: generated_script_1.txt
Deep Learning Nanodegree/tv-script-generation/network/: helper.py  preprocess.p  problem_unittests.py  trained_rnn.pt  tv_script_generation.ipynb
Deep Reinforcement Learning Nanodegree/: .gitignore  README.md
Deep Reinforcement Learning Nanodegree/collaboration-competition/: README.md  REPORT.md  Tennis.ipynb  actor_agent_0.pth  actor_agent_1.pth  critic_agent_0.pth  critic_agent_1.pth
Deep Reinforcement Learning Nanodegree/continuous-control/: Continuous_Control.ipynb  README.md  REPORT.md  actor_weights.pth  critic_weights.pth
Deep Reinforcement Learning Nanodegree/navigation/: Navigation.ipynb  README.md  weights.pth
Deep Reinforcement Learning Nanodegree/python/unityagents/: rpc_communicator.py
Robotics Software Engineer Nanodegree/build-my-world/: CMakeLists.txt  README.md
Robotics Software Engineer Nanodegree/build-my-world/docs/: RubricPoints.md
Robotics Software Engineer Nanodegree/build-my-world/model/floor-blueprint/: model.config  model.sdf
Robotics Software Engineer Nanodegree/build-my-world/model/kart/: model.config  model.sdf
Robotics Software Engineer Nanodegree/build-my-world/model/robot/: model.config
Robotics Software Engineer Nanodegree/build-my-world/script/: welcome.cpp
Robotics Software Engineer Nanodegree/build-my-world/world/: my-office.world
Robotics Software Engineer Nanodegree/go-chase-it/: README.md
Robotics Software Engineer Nanodegree/go-chase-it/docs/: RubricPoints.md
Robotics Software Engineer Nanodegree/go-chase-it/whiteball/: model.sdf
Robotics Software Engineer Nanodegree/home-service-robot/: .gitmodules  README.md
Robotics Software Engineer Nanodegree/home-service-robot/docs/: RubricPoints.md  WriteUp.md
Sensor Fusion Nanodegree/2d-feature-tracking/: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  RUBRIC_POINTS.md  pixi.toml
Sensor Fusion Nanodegree/2d-feature-tracking/include/: data_frame.h  frame_buffer.h  matching_2d.h  ring_buffer.h
Sensor Fusion Nanodegree/2d-feature-tracking/src/: camera_fusion.cpp  main.cpp  matching_2d.cpp
Sensor Fusion Nanodegree/3d-object-tracking/: .gitattributes  CMakeLists.txt  README.md  RUBRIC_POINTS.md
Sensor Fusion Nanodegree/3d-object-tracking/include/: bounding_box.h  camera_fusion.h  data_frame.h  lidar_data.h  lidar_point.h  matching_2d.h  object_detection_2d.h
Sensor Fusion Nanodegree/3d-object-tracking/results/: AKAZE_AKAZE.csv  AKAZE_BRIEF.csv  AKAZE_BRISK.csv  AKAZE_FREAK.csv  AKAZE_ORB.csv  BRISK_BRIEF.csv  BRISK_BRISK.csv  BRISK_FREAK.csv  BRISK_ORB.csv  FAST_BRIEF.csv  FAST_BRISK.csv  FAST_FREAK.csv  FAST_ORB.csv  ORB_BRIEF.csv  ORB_BRISK.csv  ORB_FREAK.csv  ORB_ORB.csv  SHITOMASI_BRIEF.csv  SHITOMASI_BRISK.csv  SHITOMASI_FREAK.csv  SHITOMASI_ORB.csv  SIFT_BRIEF.csv  SIFT_BRISK.csv  SIFT_FREAK.csv  SIFT_SIFT.csv
Sensor Fusion Nanodegree/3d-object-tracking/src/: camera_fusion.cpp  lidar_data.cpp  main.cpp  matching_2d.cpp  object_detection_2d.cpp
Sensor Fusion Nanodegree/lidar-obstacle-detection/: CMakeLists.txt  README.md
Sensor Fusion Nanodegree/lidar-obstacle-detection/include/: box.h  cluster.h  environment.h  kd_tree.h  lidar.h  process_point_clouds.h  render.h
Sensor Fusion Nanodegree/lidar-obstacle-detection/src/: cluster.cpp  environment.cpp  kd_tree.cpp  main.cpp  process_point_clouds.cpp  render.cpp
Sensor Fusion Nanodegree/lidar-obstacle-detection/src/quiz/cluster/: CMakeLists.txt  cluster.cpp  kdtree.h
Sensor Fusion Nanodegree/lidar-obstacle-detection/src/quiz/ransac/: CMakeLists.txt  ransac2d.cpp
Sensor Fusion Nanodegree/radar-target-generation-detection/: .gitattributes  README.md  RadarTargetGenerationDetection.m
cpp-nd/concurrent-traffic-simulation/: README.md
cpp-nd/concurrent-traffic-simulation/include/: Intersection.h  Street.h
cpp-nd/concurrent-traffic-simulation/src/: Street.cpp  Vehicle.cpp
cpp-nd/memory-management-chatbot/include/: chatgui.h  (+3 more)
cpp-nd/openstreetmap-route-planning/: Makefile
cpp-nd/system-monitor/: README.md
(+39 files in other folders)
